--- a/main.css
+++ b/main.css
@@ -100,6 +100,11 @@ h2{
     font-size: 30px;
 }
 
+.boxf{
+    width: 20rem;
+    height: 2.5rem;
+}
+
 button{
     width: 10rem;
     height: 3rem;
