--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body{
 .fix-nav .sticky-nav{
     position: fixed;
     top: 0px;
-    min-width: 115rem;
+    width: 100%;
 
 }
 
@@ -48,11 +48,7 @@ header{
     font-size: 25px;
 }
 
-@media screen and (max-width:420px) {
-    .search-bar{
-        max-width: 60px;
-    }
-}
+
 
 .logo{
     font-size: 20px;
@@ -63,6 +59,7 @@ nav{
      display: flex;
      justify-content: center;
      align-items: center;
+     
 }
 
 ul{
@@ -72,6 +69,7 @@ ul{
     gap: 60px;
     font-size: 2rem;
     list-style-type: none;
+    flex-wrap: wrap;
 }
 
 
@@ -98,7 +96,7 @@ h1{
     justify-content: center;
     align-content: center;
     align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(800px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 4px;
 }
 
